topic guide changes added loaders for flickering issue

--- a/findly-builder/src/app/components/onboarding-component/onboarding-component.component.scss
+++ b/findly-builder/src/app/components/onboarding-component/onboarding-component.component.scss
@@ -1222,3 +1222,9 @@ iframe{
         }
     }
 }
+.please-wait-message {
+    position: relative;
+    color: #29293b;
+    left: 15px;
+    font-size: 12px;
+} 
